# backoffice-slackbot

./: .dockerignore  .gitignore  Makefile  pyproject.toml
scripts/: setup_docker.sh  setup_logger.sh
src/: constant.py  containers.py  main.py
src/application/interfaces/: backoffice_staff.py  rag_agent.py
src/application/services/: backoffice_staff.py  rag_service.py
src/domain/models/: backofficestaff.py
src/infrastructure/agents/: rag_agent.py
src/infrastructure/clients/: s3.py
src/infrastructure/repositories/: backofficestaff.py
src/infrastructure/tools/: vectorstore_tool.py
src/presentation/slack/: rag_bot.py
src/scripts/: create_vectorstore_from_files.py
